--- a/configs/mT5-small-training-lora-multi-gpu.yaml
+++ b/configs/mT5-small-training-lora-multi-gpu.yaml
@@ -2,6 +2,10 @@ training_dataset_paths:
   - "./tokenized_dataset/ALMA_Human_Parallel"
 model_name: "google/mt5-small"
 use_lora: True
+lora_args:
+  r: 32
+  lora_alpha: 32
+  target_modules: ['q','k','v','o']
 training_args:
   output_dir: "./models/mt5-small-finetuned"
   per_device_train_batch_size: 8
